# request_manager

./: .gitignore  .pre-commit-config.yaml  .pre-commit-ruff.toml  Makefile  Readme.md  main.py  pyproject.toml  setup.cfg
src/cache_invalidator_strategy/: __init__.py  backround_update.py  base.py  ttl_strategy.py
src/cache_manager/: cache_manager.py
src/exceptions/: exceptions.py
src/rate_imiter/: rate_limiter.py
src/request_retryer/: request_retryer.py
tests/: conftest.py  test_sliding_window.py
tests/get_data_with_cache/: test_get_data_with_cache.py
tests/main_cache_decorator/: notest_cache_decorator.py  test_cache_and_retry.py  test_cache_decorator.py
tests/ttl_strategy/: test_get_data_with_ttl.py
