[tool.poetry]
name = "cache"
version = "0.1.0"
description = ""
authors = ["Андрей Парадник <apa@kode.ru>"]

[[tool.poetry.source]]
name = "appkode"
url = "https://python_user:RXnvSutNWr@nexus.kode.ru/repository/pipy-group/simple"
default = true
secondary = false


[tool.poetry.dependencies]
python = "^3.8"
tenacity = "^8.0.1"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.11"
flake8-simplify = "^0.19.3"
flake8-raise = "^0.0.5"
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = "^0.971"
flake8-comprehensions = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
addopts = "--cache-clear --color=yes -vv"
asyncio_mode = "auto"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.vscode
  | \.idea
)
'''

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
exclude = [
    'prometheus_data\.py',
    '.venv/',
    'venv/',
]

[tool.isort]
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
